Veerraju: Employee project updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=2023
+server.port=2024
 
-spring.datasource.url=jdbc:mysql://localhost:3306/groupgh
+spring.datasource.url=jdbc:mysql://localhost:3306/groupgI
 spring.datasource.username=root
 spring.datasource.password=root
 
